--- a/ChatDemoUI3.0/AndroidManifest.xml
+++ b/ChatDemoUI3.0/AndroidManifest.xml
@@ -52,6 +52,7 @@
         android:name="cn.ucai.superwechat.DemoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
+        android:theme="@style/AppTheme"
         android:label="@string/app_name">
         <activity
             android:name="cn.ucai.superwechat.ui.MainActivity"
