--- a/ChatDemoUI3.0/build.gradle
+++ b/ChatDemoUI3.0/build.gradle
@@ -5,6 +5,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
     }
 }
 
@@ -15,7 +16,7 @@ allprojects {
 }
 
 apply plugin: 'com.android.application'
-
+apply plugin: 'android-apt'
 
 
 android {
@@ -71,4 +72,7 @@ dependencies {
 //        exclude module: 'support-v4'
 //    }
     compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
